Bug 168184 - Hyperlink tooltip doesn't show destination
Summary: Hyperlink tooltip doesn't show destination
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-29 22:03 UTC by Mike Kaganski
Modified: 2025-08-30 15:25 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-08-29 22:03:49 UTC
Open attachment 202601 [details]. Hover the mouse over the hyperlink.

Prior to commit aea263a73f17a4d5ea22de506b0ba8696f747d34, it displayed "Ctrl-click to open hyperlink: c:\temp\doc1.doc". After that, it shows "Ctrl-click to open hyperlink:".
Comment 1 Mike Kaganski 2025-08-29 22:08:16 UTC
https://gerrit.libreoffice.org/c/core/+/190403
Comment 2 Commit Notification 2025-08-30 15:25:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/04c16c7b0b517cb868c0e1b102bc3d59862536e3

tdf#168184: let fetchBookmarkedValueFromInternalLink return original

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.