tdf#168184: let fetchBookmarkedValueFromInternalLink return original

... URL, when it doesn't detect an internal hyperlink, or doesn't
find a bookmarked value for it. The original string should show in
the tooltip in that case.

Also use startsWith, to make sure we don't dereference first char
of an empty string.

Change-Id: I0034fdad8148b26e7db59fc6e4e4599c4e87ed6f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190403
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins